[package]
name = "expend"
version = "1.0.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
publish = false

[dependencies]
failure = "0.1.2"
failure-tools = "4.0.2"
reqwest = "0.9.3"
serde_json = "1.0.32"
serde = "1.0.80"
structopt = "0.2.12"

[[bin]]
name="expend"
path="src/main.rs"

[profile.release]
panic = 'unwind'
incremental = false
overflow-checks = true

[dev-dependencies]
pact_consumer = "0.4.0"
pact_matching = "0.4.5"
