[package]
name = "expend"
version = "1.1.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
publish = false
license = "MIT"

[dependencies]
failure = "0.1.2"
failure-tools = "4.0.2"
reqwest = "0.9.3"
serde_json = "1.0.32"
serde = "1.0.80"
structopt = "0.2.12"
serde_yaml = "0.8.7"
termion = "1.5.1"
keyring = "0.6.1"
username = "0.2.0"
serde_derive = "1.0.80"
dirs = "1.0.4"
chrono = "0.4.6"
time = "0.1.40"
open = "1.2.2"

[[bin]]
name="expend"
path="src/cli/main.rs"

[profile.release]
panic = 'unwind'
incremental = false
overflow-checks = true

[dev-dependencies]
pact_consumer = "0.4.0"
pact_matching = "0.4.5"
